--- a/boot/grub2/grub.cfg
+++ b/boot/grub2/grub.cfg
@@ -2,5 +2,5 @@ set default="0"
 set timeout="2"
 
 menuentry "Buildroot" {
-	linux /boot/bzImage root=/dev/sda1 rootwait console=tty1
+	linux /Image root=/dev/vda2 rootwait console=tty1 rw
 }
