--- a/board/sidestore/jitserver/genimage-jitserver.cfg
+++ b/board/sidestore/jitserver/genimage-jitserver.cfg
@@ -8,19 +8,16 @@ image boot.vfat {
 	size = 60M
 }
 
-image sdcard.img {
+image jitroot.raw {
 	hdimage {
                 partition-table-type = "gpt"
 	}
 
 	partition boot {
-		partition-type = 0xC
-		bootable = "true"
 		image = "boot.vfat"
 	}
 
 	partition pythonplayer123 {
-		partition-type = 0x83
 		image = "rootfs.ext4"
 	}
 }
