--- a/board/sidestore/jitserver/genimage-jitserver.cfg
+++ b/board/sidestore/jitserver/genimage-jitserver.cfg
@@ -21,3 +21,13 @@ image jitroot.raw {
 		image = "rootfs.ext4"
 	}
 }
+
+image jitroot.qcow2 {
+	qemu {
+		format = "qcow2"
+	}
+
+	partition main {
+		image = "jitroot.raw"
+	}
+}
